@startuml

package "Domain Model" {
    class User {
        + UserID: int
        ---
        + UserName: varchar(16)
        + email: varchar(64)
        + name: varchar(64)
        + Password: varchar(32)
    }

    class Flat {
        + FlatID: int
        ---
        + name: varchar(64)
        + address: varchar(64)
    }

    class FlatRecord {
        + RecordID: int
        + UserID: int
        + FlatID: int
        ---
        + price: float
        + review: text
    }

    class Photo {
        + PhotoID: int
        ---
        + flatRecordId: int
        + photoValue: blob 
    }

    User ||--o{ FlatRecord
    Flat ||--o{ FlatRecord
    FlatRecord ||--o{ Photo
}

@enduml
